@@ -1,3 +1,9 @@
+Sun Jan 13 21:12:42 2002  Tom Gilbert  <tom@linuxbrit.co.uk>
+
+	* Gah. imlib_image_set_format("JPG") does not work, yet jpg
+	does. I think that's dumb :( This work around makes saving work
+	with uppercase filenames.
+
 Sat Jan 12 03:01:59 2002  Tom Gilbert  <tom@linuxbrit.co.uk>
 
 	* Stopped the bg code uselessly creating temp images when not
